# compare-folders

./: .gitignore  FolderCompare.py  FolderCompare.spec  pyproject.toml  readme.md
compare_folders/: __main__.py
folder_compare/: main.py
src/compare_folders/: __main__.py  core.py  gui.py
