[tool.poetry]
name = "compare-folders"
version = "3.0.0"
description = "Tool to compare two folders"
authors = ["skarfie123 <rahulpai@rocketmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
pylama = "^8.4.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compare-folders = "compare_folders.__main__:cli"

[tool.black]
line-length = 100
target-version = ["py310"]
